--- a/views/transactions/index.erb
+++ b/views/transactions/index.erb
@@ -1,5 +1,5 @@
 <h1>All Transactions</h1>
-<table>
+<table class="table table-bordered">
   <tr>
     <th>Transaction Date</th>
     <th>Product</th>
