--- a/views/transactions/index.erb
+++ b/views/transactions/index.erb
@@ -1,4 +1,5 @@
 <h1>All Transactions</h1>
+<h3><%= @transactions.count %> records displayed</h3>
 <table class="table table-bordered">
   <tr>
     <th>Transaction Date</th>
