--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,6 +31,15 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="/">All Transactions</a></li>
+          <!-- Dropdown -->
+          <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">By Product <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Product 1</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+          </ul>
+        </li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
