--- a/views/layout.erb
+++ b/views/layout.erb
@@ -35,9 +35,7 @@
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">By Product <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Product 1</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="/products/Product1">Product 1</a></li>
           </ul>
         </li>
         </ul>
