all tables by_product complete

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -36,6 +36,8 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">By Product <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/products/Product1">Product 1</a></li>
+            <li><a href="/products/Product2">Product 2</a></li>
+            <li><a href="/products/Product3">Product 3</a></li>
           </ul>
         </li>
         </ul>
@@ -44,7 +46,7 @@
   </div>
 
   <div class="container">
-    <h1>All Transactions</h1>
+    <h1><%= title %></h1>
     <h3><%= @transactions.count %> records displayed</h3>
     <table class="table table-bordered">
       <tr>
