all tables by_payment_type complete

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,15 +31,25 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="/">All Transactions</a></li>
-          <!-- Dropdown -->
+          <!-- Product Dropdown -->
           <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">By Product <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="/products/Product1">Product 1</a></li>
-            <li><a href="/products/Product2">Product 2</a></li>
-            <li><a href="/products/Product3">Product 3</a></li>
-          </ul>
-        </li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">By Product <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/products/Product1">Product 1</a></li>
+              <li><a href="/products/Product2">Product 2</a></li>
+              <li><a href="/products/Product3">Product 3</a></li>
+            </ul>
+          </li>
+          <!-- Payment Type Dropdown -->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">By Payment Type <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/payment/Amex">Amex</a></li>
+              <li><a href="/payment/Diners">Diner's Club</a></li>
+              <li><a href="/payment/Mastercard">Mastercard</a></li>
+              <li><a href="/payment/Visa">Visa</a></li>
+            </ul>
+          </li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
