--- a/views/layout.erb
+++ b/views/layout.erb
@@ -56,9 +56,9 @@
   </div>
 
   <div class="container">
-    <h1><%= title %></h1>
-    <h3><%= @transactions.count %> records displayed</h3>
+    <h1><%= title %> - <%= @transactions.count %></h1>
     <% if @column_overview %>
+      <h6>Distribution: </h6>
       <ul>
       <% @column_overview.each do |field, count| %>
         <li><%= field %>: <%= count %></li>
