--- a/views/layout.erb
+++ b/views/layout.erb
@@ -30,7 +30,7 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/">All Transactions</a></li>
+          <li><a href="/">All Transactions</a></li>
           <!-- Product Dropdown -->
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">By Product <span class="caret"></span></a>
