--- a/views/layout.erb
+++ b/views/layout.erb
@@ -50,6 +50,13 @@
               <li><a href="/payment/Visa">Visa</a></li>
             </ul>
           </li>
+          <!-- Scenarios Dropdown -->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Scenarios <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/scenario/1">All transactions above $1200</a></li>
+            </ul>
+          </li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
