--- a/views/layout.erb
+++ b/views/layout.erb
@@ -55,6 +55,8 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Scenarios <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="/scenario/1">All transactions above $1200</a></li>
+              <li><a href="/scenario/2">All transactions from France with a Visa card</a></li>
+              <li><a href="/scenario/3">All transactions that contain a transaction date</a></li>
             </ul>
           </li>
         </ul>
